apps/20-media/bookshelf/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bookshelf
  labels:
    app: bookshelf
spec:
  selector:
    app: bookshelf
  ports:
    - name: http
      port: 8787
      targetPort: http
