apps/20-media/bookshelf/base/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bookshelf
spec:
  endpointSelector:
    matchLabels:
      app: bookshelf
  ingress:
    - fromEntities:
        - host
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8787"
              protocol: TCP
